# metaballs

./: CMakeLists.txt
MetaBalls/: CMakeLists.txt  MetaBalls.c  MetaBalls.h  test.frag  test.vert
MetaBalls/include/: load.h  shader.h  window.h
MetaBalls/include/gl/: glext.h
MetaBalls/source/: load.c  shader.c  window.c
